--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
     <header>
         <img src="WhatsApp Image 2024-11-18 at 10.43.56.jpeg" alt="Фото профиля" class="profile-pic">
         <h1>Осмонов Эмилбек Кубанычбекович</h1>
-        <p>Дата рождения: 03.09.1985, Чолпон-Ата</p>
+        <p>Дата рождения: 03.09.1985</p>
+        <p>Место рождения: г. Чолпон-Ата, Иссык-Кульская область</p>
     </header>
 
     <section class="section">
         <h2>Контактные данные</h2>
-        <p><strong>Адрес:</strong> г. Бишкек, Чыгыш 5 мкр, д. 27, кв. 37</p>
+        <p><strong>Адрес:</strong> г. Бишкек, мкр. Восток 5, д. 27, кв. 37</p>
         <p><strong>Телефон:</strong> +996 558 03 11 06</p>
         <p><strong>Email:</strong> <a href="mailto:mr.emkebek@gmail.com">mr.emkebek@gmail.com</a></p>
     </section>
@@ -80,29 +81,28 @@
     <section class="section">
         <h2>Образование</h2>
         <ul>
-            <li><strong>Кыргыз Улуттук Университет</strong> (01.08.2003 – 25.06.2008)</li>
-            <p>Факультет: Математика, Информатика и Кибернетика</p>
-            <p>Специальность: Системный программист, математик</p>
+            <li><strong>Кыргызский Национальный Университет им. Ж. Баласагына</strong> (01.08.2003 – 25.06.2008)</li>
+            <p>Специальность: системный программист, прикладная математика</p>
         </ul>
     </section>
 
     <section class="section">
         <h2>Опыт работы</h2>
         <ul>
-            <li>Сектор башчысы, Аппарат Жогорку Кеңеша (08.2014 – настоящее время)</li>
-            <li>Эксперт, Аппарат Жогорку Кеңеша (12.2010 – 08.2014)</li>
-            <li>Улук консультант, Аппарат Жогорку Кеңеша (11.2010 – 12.2010)</li>
-            <li>Референт, Аппарат Президента (08.2010 – 11.2010)</li>
-            <li>Системный программист, ChangTelecom (05.2006 – 05.2008)</li>
+            <li><strong>Заведующий сектором</strong>, Отдел информационных технологий, Аппарат Жогорку Кенеша КР (08.2014 – настоящее время)</li>
+            <li><strong>Эксперт</strong>, Отдел информационных технологий, Аппарат Жогорку Кенеша КР (12.2010 – 08.2014)</li>
+            <li><strong>Старший консультант</strong>, Отдел комитета по конституционному законодательству, Аппарат Жогорку Кенеша КР (11.2010 – 12.2010)</li>
+            <li><strong>Референт</strong>, Администрация Президента КР (08.2010 – 11.2010)</li>
+            <li><strong>Системный программист</strong>, ОсОО ChangTelecom (05.2006 – 05.2008)</li>
         </ul>
     </section>
 
     <section class="section">
-        <h2>Награды</h2>
+        <h2>Награды и достижения</h2>
         <ul>
-            <li>«Кыргыз Республикасынын мамлекеттик кызматынын отличниги»</li>
-            <li>Юбилейная медаль «Кыргыз Республикасынын Жогорку Кеӊешине 70 жыл»</li>
-            <li>Юбилейная медаль «Кыргыз Республикасынын Жогорку Кеӊешине 85 жыл»</li>
+            <li>Советник государственной службы I класса</li>
+            <li>Отличник государственной службы Кыргызской Республики</li>
+            <li>Юбилейные медали «70 лет Жогорку Кенеша» и «85 лет Жогорку Кенеша»</li>
         </ul>
     </section>
 
@@ -110,8 +110,14 @@
         <h2>Навыки</h2>
         <ul>
             <li>Продвинутые навыки работы с компьютером</li>
-            <li>Работа с программами и системами</li>
+            <li>Знание компьютерных систем и прикладного программного обеспечения</li>
+            <li>Свободное владение кыргызским и русским языками, английский – разговорный уровень</li>
         </ul>
+    </section>
+
+    <section class="section">
+        <h2>Интересы</h2>
+        <p>Чтение исторической и художественной литературы</p>
     </section>
 </div>
 
